# axum-vue-template

./: LICENSE-APACHE  LICENSE-MIT  README.md  Resources.md
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/components/: HelloWorld.vue
